2021-03-14  Karl Berry  <karl@tug.org>

	* Import gregorio-6.0.0.
	* version.ac: Adapted.

2021-03-04  Karl Berry  <karl@tug.org>

	* Import gregorio-6.0.0-beta2.
	* version.ac: Adapted.

2019-12-19  Akira Kakuto  <kakuto@w32tex.org>

	* Import gregorio-5.2.1.
	* version.ac: Adapted.

2019-03-11  Akira Kakuto  <kakuto@w32tex.org>

	* Import gregorio-5.2.0.
	* version.ac: Adapted.

2018-03-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import gregorio-5.1.1.
	* version.ac: Adapted.

2018-03-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import gregorio-5.1.0.
	* version.ac: Adapted.
	* gregorio.test: remove two tests, since doc directory
	does not exist.

2017-12-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import gregorio-5.0.2. (nothing changed except for the version)
	* version.ac: Adapted.

2017-04-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import gregorio-5.0.1.
	* version.ac: Adapted.

2017-04-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import gregorio-5.0.0.
	* configure.ac (FILENAME_VERSION): no need to define for TL.
	* gregorio.test (gregorio): do not use $FILENAME_VERSION.
	* Makefile.am (bin_PROGRAMS): just "gregorio" (same as TL'16).
	(gregorio.log): likewise.

2017-04-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import gregorio-5.0.0-rc1.
	* configure.ac (FILENAME_VERSION): Gregorio developers seem to want to
	use FILENAME_VERSION postfix for the executable name in TeX Live 2017.
	* gregorio.test (gregorio): use $FILENAME_VERSION.
	* Makefile.am (bin_PROGRAMS): use $FILENAME_VERSION.

2017-03-27  Karl Berry  <karl@tug.org>

	* Makefile.am (AM_TESTS_ENVIRONMENT): use instead of TESTS_ENVIRONMENT.

2016-09-29  Karl Berry  <karl@tug.org>

	* configure.ac (FILENAME_VERSION): no need to define for TL.
	* gregorio.test (gregorio): do not use $FILENAME_VERSION.
	* Makefile.am (bin_PROGRAMS): just "gregorio" (same as TL'16).
	(gregorio.log): likewise.

2016-09-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.2.0.