@@ -10,27 +10,29 @@ export TEXMFCNF
 
 # DOCSRC=$srcdir/$GREGORIO_TREE/doc
 
-gregorio=gregorio
+BinDir=${BinDir:-.}
+ExeExt=${ExeExt:-}
+_gregorio=$BinDir/gregorio$ExeExt
 
 failed=
 
 echo "*** gregorio --version" \
-	&& ./$gregorio --version \
+	&& $_gregorio --version \
 	&& echo && echo "gregorio-version tests OK" && echo \
 	|| failed="$failed gregorio-version"
 
 echo "*** gregorio --help" \
-	&& ./$gregorio --help \
+	&& $_gregorio --help \
 	&& echo && echo "gregorio-help tests OK" && echo \
 	|| failed="$failed gregorio-help"
 
 # echo "*** gregorio -o factus.gtex factus.gabc" \
-# 	&& ./$gregorio -o factus.gtex $DOCSRC/factus.gabc \
+# 	&& $_gregorio -o factus.gtex $DOCSRC/factus.gabc \
 # 	&& echo && echo "gregorio-factus tests OK" && echo \
 # 	|| failed="$failed gregorio-factus"
 
 # echo "*** gregorio -o veni.gtex veni.gabc" \
-# 	&& ./$gregorio -o veni.gtex $DOCSRC/veni.gabc \
+# 	&& $_gregorio -o veni.gtex $DOCSRC/veni.gabc \
 # 	&& echo && echo "gregorio-veni tests OK" && echo \
 # 	|| failed="$failed gregorio-veni"
 
